fixed scrollbar width, fixed navbar padding, changed movie item image size for mobile, fixed scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,25 @@
     /* font-size: 18px; */
 }
 
+/* ion-icon {
+    padding-top: 8px;
+} */
+
 body {
     background-color: #0a0a0c;
     color: #ffffff;
     position: relative;
     font-family: 'Poppins',
     sans-serif;
+}
+
+.star-icon {
+    color:#ffd000;
+}
+
+.banner-character {
+    color:#b90000;
+    font-weight:700;
 }
 
 #nav-bar {
@@ -342,6 +355,11 @@ body {
     }
 }
 
+.nav-content .nav-content-links .nav-content-link.active {
+    color: #b90000;
+    font-weight: 600;
+}
+
 @media (max-width:755px) {
     .movies-list {
         margin: 25px;
@@ -349,7 +367,11 @@ body {
     }
 
     .genres-list {
+        flex-wrap: nowrap;
         justify-content: space-evenly;
+        overflow-x: scroll;
+        transition: 0.5s linear;
+        scrollbar-width: 0;
     }
 
     .banner {
@@ -388,6 +410,9 @@ body {
 }
 
 @media (max-width:559px) {
+    #nav-links.nav-link-toggle-show {
+        width: 60%;
+    }
     .banner-info {
         width: 85%;
     }
@@ -399,6 +424,20 @@ body {
 }
 
 @media (max-width:520px) {
+    .nav-content .nav-content-links {
+        margin: 10px;
+        justify-content: space-evenly;
+    }
+
+    .nav-content .nav-content-links .nav-content-link {
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px 5px;
+        font-size: 16px;
+    }
+
     .banner-info ul {
         flex-wrap: wrap;
         justify-content: flex-start;
@@ -407,6 +446,33 @@ body {
     .banner-info ul li {
         margin-right: 10px;
     }
+
+    #nav-bar {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    .movies-list {
+        justify-content: space-evenly;
+        margin: 25px;
+    }
+
+    .movie-list-item {
+        width: 170px;
+        /* margin-bottom: 20px; */
+        margin: 10px;
+    }
+
+    .movie-list-item img {
+        width: 100%;
+        max-width: 100%;
+        height: 270px;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 5px;
+    }
+
+    
 }
 
 @media (max-width:455px) {
@@ -414,5 +480,31 @@ body {
         font-size: 35px;
         line-height: 34px;
         font-weight: 800;
+    }
+
+    .movie-list-item {
+        width: 170px;
+        margin: 5px;
+    }
+
+    .movie-list-item img {
+        height: 270px;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 5px;
+    }
+}
+
+@media (max-width:320px) {
+    .movies-list {
+        margin: 5px;
+    }
+    .movie-list-item {
+        width: 140px;
+        margin:2px;
+    }
+
+    .movie-list-item img {
+        height: 250px;
     }
 }
